# distopf

./: .gitignore  2026-04-21-distopf_2-triplex-agent.md  MIGRATION.md  README.md  ROOT_CAUSE_ANALYSIS.md  column_migration.md  debug_l_flow_issue.py  debug_rg60.py  debug_rg60_v2.py  pyproject.toml  root_cause_analysis.py
.github/: ANALYSIS_AND_RECOMMENDATIONS.md  API_IMPROVEMENT_ISSUES.md  copilot-instructions.md
.github/tasks/: README.md  TASK_001_validate_case.md  TASK_002_export_fbs_solve.md  (+4 more)
benchmarks/: README.md  __init__.py  compare_pyomo_vs_multiperiod_ieee123_30der.py  verify_multiperiod.py  verify_pyomo.py
docs/: architecture.puml  objective_functions.md
examples/: 01_simple_power_flow.py  02_loss_minimization.py  03_voltage_optimization.py  04_comparing_backends.py  05_control_strategies.py  06_visualization_gallery.py  08_reactive_power_importance.py  09_optimization_tradeoffs.py  10_working_with_results.py  11_fbs_power_flow.py  README.md  basic_power_flow.py  build_your_own_opf.py  build_your_own_opf_static.py  cim_example.py  compare_cim_case.py  der_portfolio.py  der_portfolio_baseline.py  der_portfolio_jn.py  der_portfolio_pragmatic.py  dss_converter_test.py  dss_test_loss.py  dss_test_results.txt  fbs13.py  foresight.py  foresight_jn.py  foresight_mini.py  nlp.py  profile_matrix.py  pyomo_dss_example.py  pyomo_example.py  pyomo_multiperiod.py  pyomo_nlp_comparison.py  pyomo_regulator_control.py  pyomo_tests.py  pyomo_time_comparison.py  reg_cap_example.py  run_enapp.py  run_enapp_refactor.py  temp_test.py  (+3 more)
tests/: integration_references.json  test_api_exports.py  test_backends.py  test_case.py  test_case_validation.py  test_enapp_integration.py  test_exports.py  test_fbs_validation.py  test_integration_snapshots.py  test_matrix_models.py  test_nlp_backend.py  test_results.py  test_results_api.py  test_smoke.py  test_utilities.py  test_verify_pyomo.py
(+6744 files in other folders)
