[project]
name = "distopf"
version = "0.3.0"
description = "A package for solving unbalanced three-phase distribution system optimal power flow problems."
readme = "README.md"
authors = [
  {  name="Nathan Gray", email="nathan.gray@pnnl.gov" },
  {  name="Rabayet Sadnan", email="rabayet.sadnan@pnnl.gov"},
  {  name="Abodh Poudyal"},
]
requires-python = ">=3.10"
dependencies = [
    "cim-graph==0.4.1a2",
    "gridappsd-python>=2025.3.2a1,<2026.0.0",
    "cvxpy>=1.7.2",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "opendssdirect-py==0.8.4",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "scipy>=1.15.3",
    "pyomo>=6.9.4",
]

[project.scripts]
distopf = "distopf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "marimo>=0.15.2",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "scipy-stubs>=1.15.3.0",
    "types-networkx>=3.5.0.20250901",
    "types-openpyxl>=3.1.5.20250822",
    "types-python-dateutil>=2.9.0.20250822",
]


[tool.mypy]
[[tool.mypy.overrides]]
module = "cimgraph.*"
follow_untyped_imports = true


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "unit: marks tests as unit tests",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    --cov=distopf
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=70
    -v
    --tb=short
"""
filterwarnings = [
    # The format is action:message:category:module
    "ignore::DeprecationWarning:pytz",
]
